[package]
name = "homebrew-install-version"
version = "0.1.0"
edition = "2021"
authors = ["Agnislav Onufriichuk"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
clap = "4.4.18"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
#tokio-util = { version = "0.7.10", features = ["compat"] }
tempfile = "3.1.0"
futures = "0.3.30"
